--- a/resources/query_examples/countries.ipynb
+++ b/resources/query_examples/countries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,27 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                          country  population\n",
-      "0                           China     1409670\n",
-      "1                           India     1404910\n",
-      "2                   United States      335894\n",
-      "3                       Indonesia      282478\n",
-      "4                        Pakistan      241500\n",
-      "..                            ...         ...\n",
-      "232    Norfolk Island (Australia)           3\n",
-      "233  Christmas Island (Australia)           2\n",
-      "234            Niue (New Zealand)           2\n",
-      "235         Tokelau (New Zealand)           2\n",
-      "236                  Vatican City           1\n",
-      "\n",
-      "[237 rows x 2 columns]\n"
+      "237\n"
      ]
     }
    ],
@@ -141,7 +128,7 @@
     "df['population'] = df['population'].apply(lambda x: math.ceil(x/1000))\n",
     "#df = df.sort_values('population', ascending=True)\n",
     "df = df.reset_index(drop=True)\n",
-    "print(df)"
+    "print(len(df))\n"
    ]
   },
   {
@@ -153,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +191,199 @@
     "plt.show()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparing for SQL DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8141827\n",
+      "Brasilien\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate using itertuples()\n",
+    "import random\n",
+    "\n",
+    "entries = []\n",
+    "for row in daten.itertuples():\n",
+    "    entries.extend([row.country] * row.population)\n",
+    "random.shuffle(entries)\n",
+    "    \n",
+    "print(len(entries))\n",
+    "print(entries[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5312799 9737415 4968928 ... 5176568 1569642 5592387]\n",
+      "8141827\n",
+      "[6008246 1348222 6155789 6263805 5830644]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids = np.random.choice(range(1000000, 10000000), \n",
+    "                      size=len(entries), \n",
+    "                      replace=False)\n",
+    "\n",
+    "\n",
+    "print(ids[5:])\n",
+    "print(len(ids))\n",
+    "print(ids[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 12\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mextras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m execute_values\n\u001b[1;32m      4\u001b[0m db_params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdbname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcountries\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfridtjofdamm\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mport\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m5432\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m }\n\u001b[0;32m---> 12\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[43mids\u001b[49m, entries))\n\u001b[1;32m     13\u001b[0m data \u001b[38;5;241m=\u001b[39m [(\u001b[38;5;28mint\u001b[39m(id_), \u001b[38;5;28mstr\u001b[39m(entry)) \u001b[38;5;28;01mfor\u001b[39;00m id_, entry \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(ids, entries)]\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m: \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ids' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import src.utils.db_connector as dc\n",
+    "from psycopg2.extras import execute_values\n",
+    "\n",
+    "db_params = {\n",
+    "    \"dbname\": \"countries\",\n",
+    "    \"user\": \"fridtjofdamm\",\n",
+    "    \"password\": \"y\",\n",
+    "    \"host\": \"localhost\",\n",
+    "    \"port\": \"5432\"\n",
+    "}\n",
+    "\n",
+    "data = list(zip(ids, entries))\n",
+    "data = [(int(id_), str(entry)) for id_, entry in zip(ids, entries)]\n",
+    "\n",
+    "try: \n",
+    "    conn = pg.connect(**db_params)\n",
+    "    cur = conn.cursor()\n",
+    "\n",
+    "    create_table_query = \"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS users (\n",
+    "        id INTEGER PRIMARY KEY,\n",
+    "        country VARCHAR(255) NOT NULL\n",
+    "        );\n",
+    "    \"\"\"\n",
+    "    cur.execute(create_table_query)\n",
+    "\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO users (id, country)\n",
+    "        VALUES %s\n",
+    "    \"\"\"\n",
+    "    execute_values(cur, query, data)\n",
+    "    conn.commit()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "    conn.rollback()\n",
+    "\n",
+    "finally:\n",
+    "    if cur:\n",
+    "        cur.close()\n",
+    "    if conn:\n",
+    "        conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'psycopg2.extensions.cursor'>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'psycopg2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 29\u001b[0m\n\u001b[1;32m     28\u001b[0m res \u001b[38;5;241m=\u001b[39m cur\u001b[38;5;241m.\u001b[39mfetchall()\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mresources/query_examples/qplans_country_example/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mcountry\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     30\u001b[0m     json\u001b[38;5;241m.\u001b[39mdump(res, f)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/thesis/lib/python3.10/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'resources/query_examples/qplans_country_example/Vatikanstadt.json'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[34], line 32\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresources/query_examples/qplans_country_example/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     30\u001b[0m             json\u001b[38;5;241m.\u001b[39mdump(res, f)\n\u001b[0;32m---> 32\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[43mpsycopg2\u001b[49m\u001b[38;5;241m.\u001b[39mError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m     33\u001b[0m     conn\u001b[38;5;241m.\u001b[39mrollback()\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m err\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'psycopg2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "# india vs vatican city examle\n",
+    "test_countries = [\"Vatikanstadt\", \"Indien\"]\n",
+    "\n",
+    "db_params = {\n",
+    "    \"dbname\": \"countries\",\n",
+    "    \"user\": \"fridtjofdamm\",\n",
+    "    \"password\": \"\",\n",
+    "    \"host\": \"localhost\",\n",
+    "    \"port\": \"5432\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "conn = pg.connect(**db_params)\n",
+    "cur = conn.cursor()\n",
+    "print(type(cur))\n",
+    "\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    EXPLAIN (FORMAT JSON, ANALYZE) \n",
+    "    SELECT id, country \n",
+    "    FROM users \n",
+    "    WHERE country = %s;\n",
+    "\"\"\"\n",
+    "try:\n",
+    "    for country in test_countries:\n",
+    "        cur.execute(query, (country,))\n",
+    "        res = cur.fetchall()\n",
+    "        with open(f'resources/query_examples/qplans_country_example/{country}.json', encoding='utf-8', mode='w') as f:\n",
+    "            json.dump(res, f)\n",
+    "\n",
+    "except psycopg2.Error as err:\n",
+    "    conn.rollback()\n",
+    "    raise err\n",
+    "finally:\n",
+    "    cur.close()\n",
+    "    conn.close()\n",
+    "\n",
+    "print(res)\n"
    ]
   }
  ],
